--- a/FunBooksAndVideos/SimpleOO/Src/Order.Tests/Order.Tests.csproj
+++ b/FunBooksAndVideos/SimpleOO/Src/Order.Tests/Order.Tests.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeItemProcessorBuilder.cs" />
     <Compile Include="FakeMembershipService.cs" />
     <Compile Include="FakePurchaseOrderProcessor.cs" />
     <Compile Include="FakeShippingService.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="PurchaseOrderProcessorTests.cs" />
     <Compile Include="PurchaseOrderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpyItemProcessor.cs" />
     <Compile Include="SpyMembershipService.cs" />
     <Compile Include="SpyShippingService.cs" />
   </ItemGroup>
