Added the membership item processor service

--- a/FunBooksAndVideos/ComplexOO/Src/OrderProcessorService.Tests/OrderProcessorService.Tests.csproj
+++ b/FunBooksAndVideos/ComplexOO/Src/OrderProcessorService.Tests/OrderProcessorService.Tests.csproj
@@ -69,7 +69,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MembershipItemProcessorTests.cs" />
     <Compile Include="OrderProcessorTests.cs" />
+    <Compile Include="ProductItemProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
