added business rule 5

--- a/FunBooksAndVideos/ComplexOO/Src/BookClubService.Tests/BookClubService.Tests.csproj
+++ b/FunBooksAndVideos/ComplexOO/Src/BookClubService.Tests/BookClubService.Tests.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookClubMembershipTests.cs" />
     <Compile Include="BookClubPointsServiceTests.cs" />
     <Compile Include="BookClubServiceTests.cs" />
     <Compile Include="FakeBookClubMembershipRepository.cs" />
